# WEB_Homework_4

./: main.py  pyproject.toml
data/: data.json
